fixed weird spacing

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body{
   justify-content: center;
   width: auto;
   overflow: hidden;
+  height:200px;
 
 }
 .perk-display{
